cabal-version:       2.4

name:                bloggen
version:             0.1.0.0
synopsis:            A custom blog generator from markup files
description:         This package provides a static blog generator
                     from a custom markup format to HTML.
                     It defines a parser for this custom markup format
                     as well as an html pretty printer EDSL.

                     It is used as the example project in the online book
                     'Learn Haskell Blog Generator'. See the README for
                     more details.
homepage:            https://github.com/E-ricus/bloggen
bug-reports:         https://github.com/E-ricus/bloggen/issues
license:             BSD-3-Clause
license-file:        LICENSE.txt
author:              Eric Puentes
maintainer:          eric.david2333@gmail.com
category:            Learning, Web
extra-doc-files:
  README.md

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
  import: common-settings
  hs-source-dirs: src
  build-depends:
      base
    , directory
  exposed-modules:
    Bloggen
      Bloggen.Convert
      Bloggen.Html
        Bloggen.Html.Internal
      Bloggen.Markup
  -- other-modules:

executable bloggen-gen
  import: common-settings
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base
    , bloggen
  ghc-options:
    -O

